# cogno-cortex

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_cortex/: __init__.py  base.py  bus.py  dispatcher.py  loader.py  registry.py  types.py
docs/: HOST_INTEGRATION.md
examples/: host_min.py
examples/skills/math/: SKILL.md  math_tool.py
tests/: conftest.py
tests/integration/: test_ego_skill_live.py
tests/unit/: test_bus.py  test_dispatcher.py  test_loader.py  test_registry.py  test_types_and_base.py
