[project]
name = "cogno-cortex"
version = "0.1.0"
description = "The in-process skills framework for the Cogno stack — author skills as BaseTool + manifest, rank them against NER tags, execute via a provider bus, discover from disk, and bridge to cogno-anima's tool contract via CortexDispatcher. The framework, not the skills; infra-agnostic."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["skills", "tools", "agents", "function-calling", "cogno", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Skills are Pydantic models (BaseTool); the dispatcher bridges to cogno-anima's
# ToolDispatcher/ToolResult and skills receive a cogno-synapse LLMBackend. Neither
# cogno lib is on PyPI yet — CI installs the chain from git (see ci.yml).
dependencies = [
    "pydantic>=2.0",
    "cogno-anima",
    "cogno-synapse",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-cortex"
Repository = "https://github.com/sudoers-ai/cogno-cortex"
Issues = "https://github.com/sudoers-ai/cogno-cortex/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_cortex*"]

[tool.setuptools.package-data]
cogno_cortex = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_cortex"]
warn_unused_ignores = true
